--- a/uni/BWL_3_Ressourcenmanagement/1_Ressourcenbereitstellung.tex
+++ b/uni/BWL_3_Ressourcenmanagement/1_Ressourcenbereitstellung.tex
@@ -1,4 +1,4 @@
-% Created 2018-06-07 Thu 20:40
+% Created 2018-06-09 Sat 11:12
 % Intended LaTeX compiler: pdflatex
 \documentclass[11pt]{article}
 \usepackage[utf8]{inputenc}
@@ -14,7 +14,9 @@
 \usepackage{amssymb}
 \usepackage{capt-of}
 \usepackage{hyperref}
+\usepackage{placeins}
 \usepackage[margin=0.5in]{geometry}
+\usepackage[parfill]{parskip}
 \date{\today}
 \title{}
 \hypersetup{
@@ -29,17 +31,64 @@
 \tableofcontents
 
 \section{Ressourcen, Prozesse und Ziele betrieblicher Leistungserstellung}
-\label{sec:orgd13a2d5}
-\subsection{Grundbegriffe betrieblicher Leistungserstellung}
-\label{sec:org8dbf7df}
+\label{sec:org65b9814}
+\subsection{Leistungsbereich(Produktion)}
+\label{sec:org1d09ca4}
+\begin{center}
+\includegraphics[width=250px]{./pictures/leistungsbereich_prod.png}
+\end{center} 
+
+\FloatBarrier
+
 \subsubsection{Produktion, Produktionsfaktoren, Produktionswirtschaft}
-\label{sec:orgde801cf}
-\subsubsection{Zahlungsstrom, Kapitalveränderung, Finanzwirtschaft}
-\label{sec:org5c792fa}
+\label{sec:orga469479}
+\textbf{Produktion} = der industrielle Abbau von Material, dessen Be- und Verarbeitung und die Ausführung von Dienstleistungen; ist die methodische Umwandlung von Produktionsfaktoren in Produkte im Rahmen von bestimmten Produktionsverfahren
+
+\textbf{Produktionsfaktoren} = sind die in der Produktion eingesetzen materiellen und immateriellen Güter, durch deren Gebrauch \& Verbrauch neue Sachgüter \& Dienstleistungen (Services) entsehen; Produktionsmittel nach Gutenberg = Betriebsmittel, Werkstoffe, (objektbezogene/dispositive) Arbeitsleistungen
+
+\textbf{Produktionswirtschaft} = Aufgabe der Produktionswirtschaft ist die Planung, Durchführung \& Kontrolle der industriellen Leistungserstellung, um wirtschaftliche Produktionsstrukturen zu erreichen \& zu sichern
+\subsection{Finanzierungsbereich}
+\label{sec:orgb748580}
+
+\begin{center}
+\includegraphics[width=250px]{./pictures/finanzierungsbereich.png}
+\end{center} 
+
+Finanzierung ist sowas wie eine Beanspruchung unter Versprechen auf Erfüllung
+\begin{itemize}
+\item betriebliche Finanzierung umfasst Beschaffung und Rückzahlung finanzieller Mittel und damit verbunden die Gestaltung der Beziehungen zw Unternehmen und Kapitalgebern
+\item \emph{Finanzierungsmaßnahmen} beginnen mit Einzahlung an das Unternehmen, worauf Auszahlungen in späteren Perioden Folgen (Passivseite der Bilanz)
+\item Gesamtheit aller Finanzmittel eines Unternehmens wird als Kapital bezeichnet
+\end{itemize}
+
+Investition ist sowas wie Verzicht in der Hoffnung auf Belohnung
+\begin{itemize}
+\item zielgerichteter Einsatz von finanziellen Mitteln zur Erwirtschaftung von Erträgen
+\item \emph{Investitionsmaßnahmen} beginnen mit Auszahlung an das Unternehmen, auf die Einzahlungen in späteren Perioden folgen (Aktivseite der Bilanz)
+\end{itemize}
+bild von seite 12 iwo hin
+
+\subsubsection{Finanzwirtschaft \& Zahlungsströme}
+\label{sec:org6fb75c3}
+\textbf{Monetärer Kapitalbegriff} = im Unternehmen eingesetzte Zahlungsmittel
+
+\textbf{Finanzierung} ist die Kapitalbeschaffung für die jeweilige Unternehmung. Die \textbf{Finanzwirtschaft} umfasst diese Kapitalbeschaffung und -verwendung in der Unternehmung. Zu den finanzwirtschaftlichen Zielen gehört die Erreichung eines \emph{finanzwirtschaftlichen Gleichgewichts}, das bedeutet die Sicherung der dispositiven Liquidität, sowie die Sicherung der strukturellen Liquidität.
+
+Die Funktion des \textbf{Finanzmanagements} ist die zielgerichtete Gestaltung der betrieblichen Finanzwirtschaft. Dazu zählt hauptsächlich die aktive Gestaltung der Kapitalzuführung \& des Kapitalentzugs.
+
+\paragraph{Monetäre Zielgrößen}\\
+\begin{itemize}
+\item Zahlungsmittelbestand = Kassenbestand, Guthaben bei Kreditinstituren; Einzahlung, Auszahlung
+\item Geldvermögen = Zahlungsmittelbestand + Forderungen - Verbindlichkeiten; Einnahme, Ausgabe
+\item Gesamtvermögen = Gewinn + Verlustrechnung; Ertrag, Aufwand
+\item Betriebsnotwendiges Vermögen = Kosten- und Leistungsrechnung; Ertrag, Aufwand
+\end{itemize}
+
+
 \subsection{Gegenstandbereich \& Ziele betrieblicher Leistungserstellung}
-\label{sec:org531f673}
+\label{sec:orgf01890d}
 \subsubsection{Betriebliche Leistungserstellung als Kombinationsprozess (Gutenberg)}
-\label{sec:org06cae84}
+\label{sec:orgd5365d1}
 "\emph{Die Ergiebigkeit des Faktoreinsatzes in den  Betrieben ist einmal von der Beschaffenheit der Faktoren selbst und zum anderen von ihrer Kombination abhängig.
 Es gilt deshalb zu untersuchen, welche Umstände es sind, die den produktiven Beitrag bestimmen, den sie im Rahmen einer Faktorkombination zu leisten imstande sind.}" (Gutenberg 1975)
 
@@ -64,6 +113,14 @@ Beispiele & materiell: maschinelle Anlagen, Gebäude; immateriell: Rechte (Paten
 \end{tabular}
 \end{center}
 
+\begin{figure}[htbp]
+\centering
+\includegraphics[width=250px]{./pictures/produktion_als_kombpr.png}
+\caption{Produktion als Kombinationsprozess}
+\end{figure} 
+
+\FloatBarrier
+
 \subsubsection{Ziele \& Zielkonflikte produktionswirtschaftlicher Betätigung}
-\label{sec:org4a616ee}
+\label{sec:org49cc1ae}
 \end{document}
