--- a/uni/Klassifizierung_von_Parteien/Statement/notes.org
+++ b/uni/Klassifizierung_von_Parteien/Statement/notes.org
@@ -1,7 +1,7 @@
 * Hungary - Home of Empty Populism
 by Peter Cisgo & Norbert Merkovity
 - Aufsatz in "Populist Political Communication in Europe" (2016)
-
+  
 ** Misc
 - [[%5B%5Bhttps://www.theguardian.com/commentisfree/2015/jul/30/viktor-orban-fidesz-hungary-prime-minister-europe-neo-nazi%5D%5D ][interessanter Mudde Artikel zu Fidesz]] 
 - [[https://www.zeit.de/politik/ausland/2018-04/viktor-orban-wahlsieg-fidesz-mehrheit-ungarn-europa][Zeit Artikel zur Wahl 2018]] 
@@ -10,7 +10,7 @@ by Peter Cisgo & Norbert Merkovity
 ** Einleitung
 - in jüngsten Jahren erregte Ungarn Aufsehen durch einen Rückfall zu illiberaler(autoritär) Demokratie unter Ministerpräsident Orban
 - Viktor Orban ist der Parteivorsitzende der rechtspopulistischen & nationalkonservativen Partei Fidesz-Ungarischer Bürgerbund 
-  - diese gewann im Jahr 2010 die Parlamentswahlen mit 52% und erhielt aufgrund des Wahlsystems mehr als \frac{2}{3} der Parlamentssitze
+  - diese gewann im Jahr 2010 die Parlamentswahlen mit 52% und erhielt aufgrund des Wahlsystems mehr als $\frac{2}{3}$ der Parlamentssitze
 \rightarrow aufgrund dieser Mehrheit und Machtverhältnisse ist Fidesz in der Lage die Konstituion "im Namen des Volkes" zu modifizieren
 - Gefährdung der Demokratie/Demokratiequalität (Rule of Law, Menschenrechte, checks & balances etc) durch Fidesz
   
@@ -52,5 +52,100 @@ by Peter Cisgo & Norbert Merkovity
 3. Vona (Jobbik)
    - aktueller (bis 2018) Vorsitzender der Partei Jobbik 
      
-\rightarrow in einem politischen Raum der mit so viel Populismus behaftet ist, haben Autoren es unterlassen zwischen Populismus und mainstream Normalität zu differenzieren
+\rightarrow in einem politischen Raum der mit so viel Populismus behaftet ist, haben (ungar.) Autoren es unterlassen zwischen Populismus und mainstream Normalität zu differenzieren
 ** Populistische Akteure als Kommunikatoren
+- bisher wenig systematische Forschung im Bereich von Kommunikationsstrategien und/von Populisten
+  - daher insbesondere im Fall Ungarn wenige Erkenntnisse darüber ob eine bestimmte Art & Weise von Kommunikation als populistisch einzuordnen ist, ob Parteiführer von pop Parteien sich im Hinblick auf Charisma & Kommunikation unterscheiden und ob/wie sich mainstream Parteien von populistischen Parteien systematisch (im Hinblick auf Kommunikation) unterscheiden
+
+- die ungarische Literarur hat stattdessen hauptsächlich 2 Herangehensweisen genutzt die grob mit der Kategoriesierung von 2 Populismusarten nach Jagers & Walgrave übereinstimmen, welche die Labels "empty populism" und "anit-elitist populism" vergeben/einführen
+  - empty populism \rightarrow Populismus als systematischer Fehler in der ungarischen Politik ansich, statt als Attribut bestimmer pol Akteure
+  - anti-elitist populism \rightarrow Fokus auf antikommunistische Rhetorik der Fidesz-Partei, welche sich von der Rhetorik "of post-communist contenders" unterscheidet
+
+\rightarrow Gemeinsamkeit der beiden Ansätze ist die Annahme, dass populistische Politik "communication-driven" (durch Kommunikation gesteuert) und "irresponsible" (unverantwortlich) ist.
+
+*** Leerer Populismus (?)
+- "leerer Populismus" der mainstream-Parteien wird als strukturelle Schwäche der heutigen Demokratien wahrgenommen, die "besessen" davon sind kurzfristig und schnell Popularität zu erlangen (durch "popular media communication")
+  - demnach impliziert politischer Populismus eine Einbuße an politischer Substanz für eine erfolgreiche politische Kommunikation & Kamapagne im Gegenzug
+- diese Auffassung von Populismus verbindet Populismus mit Panikmache, Volksverhetzung, Manipulation und einem unverantwortlichen Gelüst nach Popularität
+- eine weitverbreitete Meinung ist, dass Populismus die Antwort auf medialen Druck (auf Politiker) darstellt
+  - analog behandeln viele Gelehrte Populismus als eine Antwort auf die Nachfrage der Wähler nach präzisen und einfachen Antworten
+    - nach dieser Sichtweise ist Populismus der natürliche Modus von Politik in Ländern, wo die postkommunistische Wählerschaft dominiert
+    - Szabados und Juhasz haben argumentiert, dass die zweite sozialliberale Regierung (2002-2006) populistische Kommunikationsstrategien, sowie bildbasierte (oder identitätsbasiert), Politik nutzten, um den Präferenzen der anvisierten anti-kommunistischen Gruppen gerecht zu werden
+    - folglich seien pop. Parteien in Ungarn Nutzer von klaren, eindeutigen, verständlichen und überzogenen Nachrichten, um Wählergruppen die sehr anfällig für soziale Probleme, aber weniger interessiert an Politik und kein konkrete Parteipräferenz haben, anzusprechen
+- dieser leere Populismus ist der weitverbreitetste Begriff
+- "Populism is ewuated with short-term popularity hunting and is contrasted with responsible political statemanship that engages in long-term structural reform and modernization, even if changes are uunpopular in the short term"
+  - so wäre jede Bestrebung die auf Präferenzen des Volkes abzielt, als "populistisch" zu denunzieren
+
+*** Ökonomischer Populismus
+eine andere Sichtweise auf mainstream Populismus unterstreicht seinen ökonomischen Charakter, wobei sich 2 Positionen entwickelt haben:
+1. etatistischer, protektionistischer Populismus
+
+- Etatismus (frz. État „Staat“) bezeichnet eine politische Annahme, nach der ökonomische und soziale Probleme durch staatliches Handeln zu bewältigen sind
+- latein-amerikanisch geprägt und laut Bartha & Thöt Begriff des Wohlfahrtspopulismus passend zu ungarischer Tradition, womit das Phänomen gemeint ist wenn pol Eliten soziale Privilegien erhöhen auf eine Art & Weise die definitiv die fiskalische Nachhaltigkeit verringert
+- hier wird Populismus mit der politisch motivierten Expansion von Sozialprogrammen verbunden
+- diese Auffassung von Populismus in Ungarn v.a. immer dann relevant geworden, wenn die Regierung zu jeder Wahlkampagne künstliches Wachstum und "Wohlstand" durch/aus Schulden geschaffen haben (expansive pop. Politik)
+  - alle 4 Jahre ward dieser temporäre Wohlstand dicht gefolgt von massiven Einschnitten, direkt nach der Regierungsübernahme/Amtsantritt
+- die beiden Mainstream Parteien, die sozialistische Partei und die Fidesz Parteien haben diese Art von Populismus in gleichem Maße angewandt
+
+2. (makro-)ökonomischer Populismus (Csaba)
+- andere Sichtweise die das etatistische & protekionistische Verständnis supplementiert
+- der neue makroökonomische Populismus der innerhalb neuer EU-Mitgliedsstaaten anzutreffen ist repräsentiert eine Policy des Nicht-handelns (non-action)
+  - Vermeidung jeglicher Handlung die aus Sicht des Politikers zu kontrovers oder unpopulär sein könnte
+    - "this non-action is partly fed by politicans' distrust of national state powers as well as their proness to entrust their countries' fate to international forces that they believe to guarantee security"
+    - diese neuen Populisten glauben das makroökonomische Stabilität (im wirtschaftl oder persoenlichen Sinne?!) der Schlüssel zum oben genannten europäische/globalen Sicherheitsnetz
+- diese Herangehensweise ist häufig gepaart mit einer Doktrin die Steuerkürzungen verlangt
+- Csaba: "If traditonal populism is statist and interventionist, with complex indeological references, current populism is free marketer, favors minimalist concept of of the state with disarmingly simple ideology mirroring introductory textbooks: lower taxes will solve everything"
+- makroökonomischer Populismus ist die Verkörperung jeglicher Risikovermeidung
+  - Ursprung in der Priorisierung von "short-term communication gains over long-term reforms"
+  
+
+*** weitere Populismus Konzeption (theory of leader democracy)
+- Populismus als politische, kommunikations-geleitete, opportunistische Form von Politik (Körösenyi & Pakulski) im Kontrast zum Konzept der Politikpersonalisierung
+ - Politikpersonalisierung wirkt der oben genannten populistischen Degradierung entgegen und ist nicht ein Teil dieses Prozesses
+- Leader Democracy könnte das Heilmittel gegen unverantwortlichen, aufmerksamkeitssuchenden Populismus sein und evtl sogar die heutige Politik re-demokratisieren
+- "the shift toward more leader-centered elites may strengthen, rather than undermine, democratic political regimes. Leader-centeredness may enhance the consistency, coherence, and therefore long-term effectiveness of political action"
+
+*** eine weitere Herangehensweise an pop pol Akteure in Ungarn (Szabo)
+- Fidesz's antielitäre, antikommunistische Politik macht diese Partei "populistischer" als die Rivalen
+- Fidesz repräsentiere einen bestimmten Widerstand gegen die bestehende Ordnung (starker Einfluss multinationaler Firmen, Eintritt in EU)
+- aufgrund der populären Ablehnungshaltung gegen die nicht erfolgreiche Postkommunismus-Transition, hat sich Fidesz erfoglreich als Anlaufstelle der antikommunistischen Revolte positioniert
+  - antikommunistische Identiät sei auf der Tradition der "Volkisch" (populär) oppositionellenen Bewegung der ungarischen Intelligenzija (Akademikerschicht)
+    - diese Bewegung hat während der vergangenen 2 Dekaden des Sozialismus stark Antikommunistische Einstellungen kommuniziert
+
+Szabo hat bei dieser Untersuchung des "Volkes", der kommunistischen und der postkommunistischen Elite 5 Elemente von rechtem, antikommunistischen Populismus herausgearbeitet:
+1. anti-establishmente, antielitäre und anti-nomenklatura Orienteriung
+2. auf der "Seite des Volkes" (Zivilgesellschaft, nationale, rurale und ethnische Gemeinschaften /gegen/ die "alienated aliens")
+3. Verantwortlichmachung der parlamentarischen und elektoralen Institutionen für Verzerrung & Verfälschung des Volkswillens (popular will)
+4. Schaffung von "Citizen Alliances" mit dem Volk, wobei nationale und religiöse Symbolik eine signifikante Rolle spielen
+5. Auflösung der organisationellen Infrastruktur der Partei durch Hingabe des Momentums, welches spontan durch die Bürgeriniativen entsteht
+   
+
+Auch wenn die Jobbik Partei Ähnlichkeiten zu Fidesz aufweist, hat noch nicht soviel Forschung zu ihrer Kommunikation stattgefunden
+ - Ausnahme ist ein Artikel der aufzeigt das Jobbik erfolgreich die Agenda für die ungarische Politik mit dem Slogan "Twenty Years, for the Twenty Years" gesetzt hat, was eine Reaktion von allen Parteien erzwang
+
+** Die Medien und Populismus
+Autoren haben nur 1 Artikel gefunden der explizit auf die Repräsentation von populistischen Parteien in den Medien eingeht
+- Vorstellung des Artikels
+- Präsentation von 3 Studien zur Medienpräsenz der Jobbik Partei
+  - in den Studien wird das Wort Populismus nicht genutzt aber sie sind trotzdem hilfreich
+
+*** Boda, Szabo, Bartha, Medve, Vidra (2014)
+Analyse der Medien und politischer Repräsentation von "penal populism" ("tough on crimes") in Ungarn
+
+- zwei Hypothesen
+  - linke Parteien lehnen penal populism ab, während rechte Parteien penal populism unterstützen
+    - erwies sich größtenteils korrekt (viele rechte Parteien und nur vereinzelt linke Parteien penal populist)
+  - mediale Repräsentation von Strafttraten hilft bei der Verbreitung von penal populism in der Sphäre der Öffentlichkeit
+    - ließ sich nicht beweisen
+ 
+\rightarrow Penal Populism wird hauptsächlich von rechten politischen Akteuren verwendet und nicht von den Medien
+
+*** Bernath (2014)
+Interview von 24 Nachrichtenredaktionen
+- einige Übereinstimmung über das was als extrimistisch zu betrachten ist
+- 15 Redaktionen unterstützten das Statement "Jobbik ist extremistisch" voll und ganz
+- die meisten Redaktionen haben angemerkt, dass in Ungarn nicht nur extremistische Parteien extremistische Rhetorik verwenden
+  - neues mainstream Phänomen, dass einfache und simpel gehaltene Erklärungen immer mehr zunehmen
+- die meisten Herausgeber denken, dass der öffentliche Diskurs in Ungarn, sowie die Medien Gefangene der rechtsradikalen pol Sprache seien
+
+s 305 oben
