--- a/uni/Klassifizierung_von_Parteien/Statement/statement.org
+++ b/uni/Klassifizierung_von_Parteien/Statement/statement.org
@@ -1,9 +1,22 @@
+#+LaTeX_CLASS: report
 #+LATEX_HEADER: \usepackage[doublespacing]{setspace}
 #+LATEX_HEADER: \usepackage[margin=0.8in]{geometry}
 *1. Welche bestehende Definition von Populismus passt zum Fallbeispiel Ungarn? Erfordern die besonderen Umstände vielleicht die Einführung Kozeptualisierung eines maßgeschneiderten Begriffs?*
+
 In den letzten Jahren erregte Ungarn Aufsehen durch einen Rückfall zu /illiberaler Demokratie/ unter Viktor Orbán, welcher liberale Werte zwar nicht per se ablehnt, aber sie auch nicht für einen zentralen Bestandteil einer Demokratie hält. Orbán ist der Parteivorsitzender der rechtspopulistischen und nationalkonservativen Partei Fidesz – Magyar Polgári Szövetség (z. Dt. "Fidesz- Ungarischer Bürgerbund").
 
-Überraschenderweise existiert allerdings nur begrenzt Forschung zum Populismus in Ungarn. Der Großteil der Literatur bezieht sich nämlich lediglich auf den Zeitraum zwischen 2000 und 2010, welcher in Ungarn allgemein als gescheiterte Dekade gilt.
+Überraschenderweise existiert allerdings nur begrenzt aktuelle Forschung zum Populismus in Ungarn. Der Großteil der Literatur bezieht sich nämlich lediglich auf den Zeitraum zwischen 2000 und 2010, welcher in Ungarn allgemein als gescheiterte Dekade gilt. Dieses vermeintliche Scheitern erklärt warum Publikationen in dieser Zeit populistisches Verhalten kritisch beurteilt haben. Die Schuld wurde in diesem Zuge jeder Partei zugeschoben die seit 1998 an der Regierung beteiligt war. Populistisches Verhalten wird also hauptsächlich den Mainstream-Parteien nachgesagt bzw. vorgeworfen, während neue anti-establishment Parteien, wie beispielsweise die rechtsextreme Jobbik Partei, seltener als populistisch bezeichnet werden. Dies ist unter Angesicht der Annahme, dass eine ablehnende Haltung gegenüber dem Establishment in der Regel ein häufig anzutreffendes Merkmal von Populisten ist, ungewöhnlich. Darüber hinaus werden die meisten mit Populismus in Verbindung zu bringenden Phänomene in der Literatur als /empty populism/ kategoriesiert. Ungarische Autoren, so Cisgo(!@@) und Merkovity, würden diesen Begriff eher negativ konnotieren, obwohl er eigentlich neutral sei.
+
+Meiner Meinung nach könnte an dieser Stelle bereits die Notwendigkeit für eine weitere, neue Konzeptualisierung von Populismus aufgezeigt werden, da der intendierte neutrale Gehalt von "leerem Populismus" in Ungarn scheinbar abhanden gekommen ist.
+
+Die Fidesz Partei wird hingegen nationalistische Mobilisierung, sowie anti-kommunistische Propaganda nachgesagt. Damit qualifiziere sie sich für die Konzeptualisierung des /complete populism/ nach Jaegers und Walgrave, in Form der antielitären Haltung kombiniert mit Ausgrenzung bestimmter Gruppen.
+
+Trotz des Vorwurfs des Populismus den ein Großteil der Gelehrten den Mainstream-Parteien mache, kristallisiere sich nicht "die eine populistische Partei" schlechthin heraus. Cisgo und Merkovity begründen dies damit, dass es einfach keine Partei gebe, die sich von konventionellen, nicht-populistischen Parteien deutlich unterscheiden würde.
+
+Somit passe die ungarische Politik und die Literatur zum Populismus weder zu Populismuskonzeptionen, die Populismus nicht gleich mit Mainstream-Politik setzen, noch unterscheide sie zwischen Populisten und Nichtpopulisten.
+
+Hier deuten die Autoren bereits an, dass weitverbreitete Populismuskonzeptionen nicht auf die ungarische Realität angewandt werden. Ob die Ursache dafür in der Literatur, die nicht ausreichend differenziert, liegt oder in den Gegebenheiten des politischen Systems Ungarns bleibt zwar offen, aber dennoch drängt sich meiner Meinung nach die Frage nach einer weiteren Konzeptualisierung von Populismus auf.
+
 
 *2. Ab wann könnte man davon sprechen, dass Populismus* 
 Ist der Anstieg von 10% auf 21% wirklich so leicht damit zu erklären, dass es lediglich eine Ablehnung der Elite aufzeige? Macht man es sich damit nicht zu leicht , bzw ist das kein gerechtfertigter Grund wenn die Unzufiredenheit so gross ist das man extremistisch wählt selbst wenn man nicht extremistisch ist , risiko gefhar?
